--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   frontend:
-    image: xxxxxxx.dkr.ecr.eu-central-1.amazonaws.com/simple-app:frontend
+    image: 367185499224.dkr.ecr.ap-southeast-1.amazonaws.com/simple-app:frontend
     deploy:
       replicas: 1
     ports:
@@ -10,6 +10,6 @@ services:
     depends_on:
       - backend
   backend:
-    image: xxxxxxx.dkr.ecr.eu-central-1.amazonaws.com/simple-app:backend
+    image: 367185499224.dkr.ecr.ap-southeast-1.amazonaws.com/simple-app:backend
     deploy:
       replicas: 3
